--- a/SDKVideoPlayer/Helper/PlaceholderViews/Error/ErrorPlaceholderView.xib
+++ b/SDKVideoPlayer/Helper/PlaceholderViews/Error/ErrorPlaceholderView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="4op-bm-CjR" customClass="ErrorPlaceholderView" customModule="UpcomingMovies" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="4op-bm-CjR" customClass="ErrorPlaceholderView" customModule="SDKVideoPlayer" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="345"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ErrorPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="fLV-g5-yWI">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="disconnect" translatesAutoresizingMaskIntoConstraints="NO" id="fLV-g5-yWI">
                     <rect key="frame" x="137.5" y="51" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="O1d-2c-OSK"/>
@@ -39,7 +39,7 @@
                         </label>
                     </subviews>
                 </stackView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ej-Of-szu" customClass="ShrinkingButton" customModule="UpcomingMovies" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ej-Of-szu" customClass="ShrinkingButton" customModule="SDKVideoPlayer" customModuleProvider="target">
                     <rect key="frame" x="127.5" y="234" width="120" height="48"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="48" id="0ed-Db-fyR"/>
@@ -83,7 +83,7 @@
         </designable>
     </designables>
     <resources>
-        <image name="ErrorPlaceholder" width="50" height="50"/>
+        <image name="disconnect" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
